This was required to build plugin on my Win laptop