@@ -262,6 +262,9 @@ tasks {
     withType<RunIdeTask> {
         // Match Rider's default heap size of 1.5Gb (default for runIde is 512Mb)
         maxHeapSize = "1500m"
+        jvmArgs(
+            "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
+            "-Djna.boot.library.path=${setupDependencies.orNull?.idea?.get()?.classes}/lib/jna/${System.getProperty("os.arch")}")
     }
 
     val resetLexerDirectory = create("resetLexerDirectory") {
